src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_43.deca
// Description:
//    regle 3.43, condition
//
// Resultats:
//    Ligne 7: 'this' cannot refer to Object class.
{
    boolean b = this.equals(0);
}